assignment detail for admin working

--- a/Hammond-SPA/src/app/assignments/assignment-item/assignment-item.component.html
+++ b/Hammond-SPA/src/app/assignments/assignment-item/assignment-item.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-2">
+<div class="card mb-2" [routerLink]="['/admin']">
   <div class="container">
       <div class="card-body">
           <div class="">
