--- a/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
+++ b/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <i class="fa fa-arrow-circle-left" [routerLink]="['/admin']"></i>
+  <i class="fa fa-arrow-circle-left"></i>
   <form class="form-inline" #form="ngForm" (ngSubmit)="loadAssignments()" novalidate>
     <div class="form-group px-2">
       <label for="gradeLevel">Show: </label>
@@ -21,14 +21,18 @@
       Reset Filter
     </button>
   </form>
-    <div *ngFor="let assignment of assignments">
+  <ng-container *ngIf="!showAssignmentDetail">
+    <div *ngFor="let assignment of assignments" (click)="assignmentDetailClick(assignment)">
       <h4>{{assignment.title}}</h4>
       <ul>
         <li>Date Due: {{assignment.dateDue}}</li>
         <li>Student Level: {{assignment.studentLevel}}</li>
         <li>Assigned?: {{assignment.assigned}}</li>
       </ul>
-      </div>
+    </div>
+  </ng-container>
+  
+  <app-assignment-detail *ngIf="showAssignmentDetail" [assignment]="detailedAssignment"></app-assignment-detail>
 
       <div class="d-flex justify-content-center">
         <pagination [boundaryLinks]="true"
@@ -41,3 +45,4 @@
       </div>
 
 </div>
+
