--- a/Hammond-SPA/src/app/student/stud-group-tab/stud-group-tab.component.html
+++ b/Hammond-SPA/src/app/student/stud-group-tab/stud-group-tab.component.html
@@ -1,3 +1,6 @@
-<div *ngFor="let groupMember of group.userGroups">
-  <app-user-item [user]="groupMember.user"></app-user-item>
-</div>
+<ng-container>
+  <div *ngFor="let groupMember of group.userGroups">
+    <app-user-item *ngIf="groupMember.user.id != user.id" [user]="groupMember.user"></app-user-item>
+  </div>
+</ng-container>
+
