assignment detail with message working

--- a/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
+++ b/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
@@ -35,7 +35,7 @@
     </div>
   </ng-container>
   
-  <app-assignment-detail *ngIf="showAssignmentDetail" [assignment]="detailedAssignment"></app-assignment-detail>
+  <app-assignment-detail *ngIf="showAssignmentDetail"></app-assignment-detail>
 
       <div *ngIf="!showAssignmentDetail" class="d-flex justify-content-center">
         <pagination [boundaryLinks]="true"
