--- a/Hammond-SPA/src/app/admin/registrations/student-registration/student-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/student-registration/student-registration.component.html
@@ -15,7 +15,7 @@
             <label class="control-label" style="margin-right:10px">Grade:  </label>
             <br>
             <label class="radio-inline">  
-              <input class="mr-1 ml-2" type="radio" value="sophmore" formControlName="studentLevel">Sophmore  
+              <input class="mr-1 ml-2" type="radio" value="sophomore" formControlName="studentLevel">Sophomore  
             </label>
             <br>  
             <label class="radio-inline ml-2">  
