Profiles show assignments

--- a/Hammond-SPA/src/app/mentor/mentor-stud-tab/mentor-stud-tab.component.html
+++ b/Hammond-SPA/src/app/mentor/mentor-stud-tab/mentor-stud-tab.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     
-  <div *ngIf="!studentListMode && !studentRegisterMode && !dropBoxMode">
+  <div>
       <ul>
 
           <li [routerLink]="['/mentor/mygroup']">My Students</li>
