group registration filtered by grade

--- a/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
@@ -1,5 +1,20 @@
 <div class="container">
     <i class="fa fa-arrow-circle-left" [routerLink]="['/admin']"></i>
+    <form class="form-inline" #form="ngForm" (ngSubmit)="loadUsers()" novalidate>
+      <div class="form-group px-2">
+        <label for="gradeLevel">Grade: </label>
+          <select name="gradeLevel" id="gradeLevel" class="form-control ml-1"
+            [(ngModel)]="userParams.studentLevel">
+            <option *ngFor="let studLev of studentLevel" [value]="studLev.value">
+              {{studLev.display}}
+            </option>
+          </select>            
+      </div>
+      <button type="submit" class="btn btn-primary" style="margin-left:10px">Apply Filters</button>
+      <button type="button" class="btn btn-info" (click)="resetFilter()" style="margin-left:10px">
+        Reset Filter
+      </button>
+    </form>
   <div class="row">
       <div class="col-sm-4 col-md-4 col-lg-4">
         <h4>Mentors</h4>
