--- a/Hammond-SPA/src/app/mentor/mentor-stud-list/mentor-stud-list.component.html
+++ b/Hammond-SPA/src/app/mentor/mentor-stud-list/mentor-stud-list.component.html
@@ -1,10 +1,10 @@
 <div class="container mt-4">
     <i class="fa fa-arrow-circle-left" [routerLink]="['/mentor']"></i>
-  <div class="">
+  <ng-container class="">
     <div *ngFor="let user of users" class="">
-      <app-user-item [user]="user"></app-user-item>
+      <app-user-item *ngIf="user.userRoles[0].role.name == 'Student'" [user]="user"></app-user-item>
     </div>
-  </div>
+  </ng-container>
 </div>
 
 <div class="d-flex justify-content-center">
