--- a/Hammond-SPA/src/app/landingpages/mentor-landing/mentor-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/mentor-landing/mentor-landing.component.html
@@ -4,6 +4,10 @@
   <div class="container">
     <tabset class="mentor-tabset" #mentorTabs>
       <tab heading="Events">
+        <div *ngFor="let event of events" class="row">
+          <strong>{{event.title}}:&nbsp;&nbsp;</strong>
+          <p>{{event.eventDate | date: 'mediumDate'}}</p>
+        </div>
       </tab>
   
       <tab heading="Assignments">
