--- a/Hammond-SPA/src/app/mentor/mentor-stud-tab/mentor-stud-tab.component.html
+++ b/Hammond-SPA/src/app/mentor/mentor-stud-tab/mentor-stud-tab.component.html
@@ -1,10 +1,9 @@
 <div class="container">
     
   <div>
-      <ul>
-
-          <li [routerLink]="['/mentor/mygroup']">My Students</li>
-          <li [routerLink]="['/mentor/students']">My Class</li>      
+      <ul style="list-style-type:none;">
+          <h4 [routerLink]="['/mentor/mygroup']">My Students</h4>
+          <h4 [routerLink]="['/mentor/students']">My Class</h4>      
         </ul>
   </div>
 
