--- a/Hammond-SPA/src/app/student/stud-profile-tab/stud-profile-tab.component.html
+++ b/Hammond-SPA/src/app/student/stud-profile-tab/stud-profile-tab.component.html
@@ -1,4 +1,4 @@
-<h3>{{user.firstName}} {{user.lastName}}</h3>
+<!-- <h3>{{user.firstName}} {{user.lastName}}</h3>
 
 <div class="container">
   <ul>
@@ -6,4 +6,6 @@
     <li class="menu-nav">Average ACT Score: </li>
     <li class="menu-nav">Next Assignment Due Date:</li>
   </ul>
-</div>
+</div> -->
+
+<app-user-profile></app-user-profile>
