--- a/Hammond-SPA/src/app/admin/events-list/events-list.component.html
+++ b/Hammond-SPA/src/app/admin/events-list/events-list.component.html
@@ -13,12 +13,18 @@
       Reset Filter
     </button> -->
   </form>
+  <br>
   <div class="events-list" *ngFor="let event of evnts">
-    <h5>{{event.title}}</h5>
-    <p>{{event.content}}</p>
-
-    <p *ngIf="event.eventDate">{{event.title}} will be occuring on {{event.eventDate | date: 'mediumDate'}}</p>
-    <p *ngIf="!event.eventDate">Date is to be determined</p>
+    <div class="card row">
+      <div class="container">
+        <div class="card-body">
+          <strong>{{event.title}}:&nbsp;&nbsp;</strong>
+          <p *ngIf="event.eventDate">{{event.title}} will be occuring on {{event.eventDate | date: 'mediumDate'}}</p>
+          <p *ngIf="!event.eventDate">Date is to be determined</p>
+        </div>
+      </div>
+    </div>
+    <br>
   </div>
 
   <div class="d-flex justify-content-center">
