names show on assignment message thread

--- a/Hammond-SPA/src/app/student/stud-assignment-tab/stud-assignment-tab.component.html
+++ b/Hammond-SPA/src/app/student/stud-assignment-tab/stud-assignment-tab.component.html
@@ -3,7 +3,7 @@
     <br>
   <div *ngIf="assignmentListMode">
       <div *ngFor="let assignment of assignments">
-          <app-assignment-item [assignment]="assignment"></app-assignment-item>
+          <app-assignment-item [user]="student" [assignment]="assignment"></app-assignment-item>
         </div>
   </div>
   <!-- <div class="container" *ngIf="assignmentViewMode">
