--- a/Hammond-SPA/src/app/users/user-profile/user-profile.component.html
+++ b/Hammond-SPA/src/app/users/user-profile/user-profile.component.html
@@ -88,8 +88,17 @@
     <ul style="list-style-type:none;" *ngFor="let assignment of user.userAssignments">
       <div class="card">
         <div class="container">
-          <li class="card-body" *ngIf="operatingUserRole === 'Student'" [routerLink]="['/student/assignments', assignment.assignmentId]"><strong>{{assignment.assignment.title}}</strong>: {{assignment.assignment.dateDue | date: 'mediumDate'}}</li>
-          <li class="card-body" *ngIf="operatingUserRole === 'Mentor' || 'Admin' || 'Tutor'" [routerLink]="['/student/assignments', assignment.assignmentId]"><strong>{{assignment.assignment.title}}</strong>: {{assignment.assignment.dateDue | date: 'mediumDate'}}</li>
+
+          <li class="card-body" *ngIf="operatingUserRole === 'Student'"
+          [routerLink]="['/student', user.id, '/assignment', assignment.assignmentId]">
+          <strong>{{assignment.assignment.title}}</strong>: 
+          {{assignment.assignment.dateDue | date: 'mediumDate'}}</li>
+
+          <li class="card-body" *ngIf="operatingUserRole === 'Mentor' || 'Admin' || 'Tutor'"
+          [routerLink]="['/student', user.id, 'assignment', assignment.assignmentId]">
+          <strong>{{assignment.assignment.title}}</strong>: 
+          {{assignment.assignment.dateDue | date: 'mediumDate'}}</li>
+
         </div>
       </div>
     </ul>
