--- a/Hammond-SPA/src/app/nav/nav.component.html
+++ b/Hammond-SPA/src/app/nav/nav.component.html
@@ -3,13 +3,17 @@
   
 
     <ul class="navbar-nav mr-auto">
-      
-      <li class="nav-item"  routerLinkActive="active" >
-        <a class="nav-link" [routerLink]="['/values']">Values</a>
+      <ng-container *ngIf="roles">
+        <li class="nav-item" *ngFor="let r of roles">
+          <a class="nav-link">
+            {{r}}
+          </a>
+        </li>
+      </ng-container>
+      <li *ngIf="role" class="nav-item">
+        <a class="nav-link">{{role}}</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/lists']">Lists</a>
-      </li>
+
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/messages']">Messages</a>
       </li>
