--- a/Hammond-SPA/src/app/nav/nav.component.html
+++ b/Hammond-SPA/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
     <ul class="navbar-nav mr-auto">
       <ng-container *ngIf="roles">
         <li class="nav-item" *ngFor="let r of roles">
-          <a class="nav-link">
+          <a class="nav-link" [routerLink]="['/', r.toLowerCase() ]">
             {{r}}
           </a>
         </li>
@@ -18,16 +18,24 @@
         <a class="nav-link" [routerLink]="['/messages']">Messages</a>
       </li>
       
-
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
+      
+      
     </ul>
+
+    <!-- <ng-container class="dropdown" *ngIf="roles" dropdown>
+
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Roles
+      </a>
+    
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <div *ngFor="let r of roles">
+          <a class="nav-link" [routerLink]="['/', r.toLowerCase() ]">
+            {{r}}
+          </a>
+        </div>
+      </div>
+  </ng-container> -->
 
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
 
