--- a/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
@@ -10,40 +10,51 @@
             </option>
           </select>            
       </div>
-      <button type="submit" class="btn btn-primary" style="margin-left:10px">Apply Filters</button>
-      <button type="button" class="btn btn-info" (click)="resetFilter()" style="margin-left:10px">
+      <button type="submit" class="btn btn-primary" style="margin-left:10px">Apply Filter</button>
+      <!-- <button type="button" class="btn btn-info" (click)="resetFilter()" style="margin-left:10px">
         Reset Filter
-      </button>
+      </button> -->
     </form>
   <div class="row">
       <div class="col-sm-4 col-md-4 col-lg-4">
         <h4>Mentors</h4>
-        <ul>
-          <div *ngFor="let user of users">
-            <li (click)="groupUser(user)" *ngIf="user.userRoles[0].role.name == 'Mentor' && user.userRoles[0].user.userGroups.length < 1 && !user.grouped">
-              {{user.lastName}}, {{user.firstName}}
-            </li>
+        <ul style="list-style-type: none;">
+          <div class="" *ngFor="let user of users">
+              <div class="card" *ngIf="user.userRoles[0].role.name == 'Mentor' &&
+              user.userRoles[0].user.userGroups.length < 1 && !user.grouped">
+                <li class="card-body" (click)="groupUser(user)">
+                  {{user.lastName}}, {{user.firstName}}
+                </li>
+              </div>
           </div>
         </ul>        
       </div>
       <div class="col-sm-4 col-md-4 col-lg-4">
-        <ul>
-            <div *ngFor="let user of users">
-                <li (click)="ungroupUser(user)" *ngIf="user.grouped">
-                  {{user.lastName}}, {{user.firstName}}
-                </li>
-              </div>
-
+        <h4>&nbsp;</h4>
+        <ul class="" style="list-style-type: none;">
+          <div *ngIf="isGroup > 0" class="card">
+            <div class="card-body" *ngFor="let user of users">
+              <li (click)="ungroupUser(user)" *ngIf="user.grouped">
+                {{user.lastName}}, {{user.firstName}}
+              </li>
+            </div>
+            <button [disabled]="this.groupToRegister.studentIds.length < 1 ||
+            this.groupToRegister.volunteerIds.length < 1" (click)="register()"
+            class="btn btn-success">Create Group</button>
+          </div>
         </ul>
-        <button [disabled]="this.groupToRegister.studentIds.length < 1 || this.groupToRegister.volunteerIds.length < 1" (click)="register()" class="btn btn-success">Register</button>
+        
       </div>
       <div class="col-sm-4 col-md-4 col-lg-4">
         <h4>Students</h4>
-        <ul>
+        <ul style="list-style-type: none;">
             <div *ngFor="let user of users">
-                <li (click)="groupUser(user)" *ngIf="user.userRoles[0].role.name == 'Student' && !user.grouped && user.userRoles[0].user.userGroups.length < 1 && !user.grouped">
+              <div class="card" *ngIf="user.userRoles[0].role.name == 'Student' && !user.grouped &&
+               user.userRoles[0].user.userGroups.length < 1 && !user.grouped">
+                <li class="card-body" (click)="groupUser(user)">
                   {{user.lastName}}, {{user.firstName}}
                 </li>
+              </div>
               </div>
         </ul>
           
