group list fade out/ has jarring page refresh

--- a/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
@@ -29,7 +29,7 @@
           </div>
         </ul>        
       </div>
-      <div class="col-sm-4 col-md-4 col-lg-4">
+      <div [@fade]="stateName" id="group-col" class="col-sm-4 col-md-4 col-lg-4">
         <h4>&nbsp;</h4>
         <ul class="" style="list-style-type: none;">
           <div *ngIf="isGroup > 0" class="card">
