--- a/Hammond-SPA/src/app/admin/groups-list/groups-list.component.html
+++ b/Hammond-SPA/src/app/admin/groups-list/groups-list.component.html
@@ -6,7 +6,8 @@
         <div class="card">
             <ul class="card-body" style="list-style-type:none">
                 <li><strong>Group Id: {{group.id}}</strong></li>
-                <li *ngFor="let ug of group.userGroups">{{ug.user.lastName}}, {{ug.user.firstName}} </li>
+                <li *ngFor="let ug of group.userGroups">{{ug.user.lastName}}, {{ug.user.firstName}}
+                    <i (click)="removeMember(ug.user)" class="fa fa-minus-circle"></i></li>
             </ul>
             <button class="btn btn-primary" (click)="disbandGroup(group.id)">Disband Group</button>
         </div>
